--- a/pinyougou-manager-web/src/main/webapp/admin/brand.html
+++ b/pinyougou-manager-web/src/main/webapp/admin/brand.html
@@ -33,7 +33,7 @@
       }
 
       // 重新加载列表数据
-      $scope.reloadList = function() {
+      $scope.reloadList = () => {
         // 切换页码
         $scope.findPage($scope.paginationConf.currentPage, $scope.paginationConf.itemsPerPage)
       }
@@ -49,18 +49,33 @@
         // 页码选项
         perPageOptions: [10, 20, 30, 40, 50],
         // 更改页面时触发事件
-        onChange: function() {
+        onChange: () => {
           //重新加载
           $scope.reloadList()
         }
       }
       //分页
-      $scope.findPage = function(page, rows) {
+      $scope.findPage = (page, rows) => {
         $http.get('../brand/findPage.do?page=' + page + '&rows=' + rows).success(
-          function(response) {
+          (response) => {
             $scope.list = response.rows
             //更新总记录数
             $scope.paginationConf.totalItems = response.total
+          }
+        )
+      }
+
+      // 增加品牌
+      $scope.save = () => {
+        $http.post('../brand/add.do', $scope.entity).success(
+          (response) => {
+            if (response.success) {
+              // 增加成功，显示分页列表
+              $scope.reloadList()
+            } else {
+              // 增加失败，弹出提示信息
+              alert(response.message)
+            }
           }
         )
       }
@@ -85,7 +100,7 @@
       <div class="pull-left">
         <div class="form-group form-inline">
           <div class="btn-group">
-            <button type="button" class="btn btn-default" title="新建" data-toggle="modal" data-target="#editModal"><i class="fa fa-file-o"></i> 新建
+            <button type="button" class="btn btn-default" title="新建" data-toggle="modal" data-target="#editModal" ng-click="entity={}"><i class="fa fa-file-o"></i> 新建
             </button>
             <button type="button" class="btn btn-default" title="删除"><i class="fa fa-trash-o"></i> 删除</button>
             <button type="button" class="btn btn-default" title="刷新" onclick="window.location.reload();"><i class="fa fa-refresh"></i> 刷新
@@ -148,16 +163,16 @@
           <table class="table table-bordered table-striped" width="800px">
             <tr>
               <td>品牌名称</td>
-              <td><input class="form-control" placeholder="品牌名称"></td>
+              <td><input class="form-control" placeholder="品牌名称" ng-model="entity.name"></td>
             </tr>
             <tr>
               <td>首字母</td>
-              <td><input class="form-control" placeholder="首字母"></td>
+              <td><input class="form-control" placeholder="首字母" ng-model="entity.firstChar"></td>
             </tr>
           </table>
         </div>
         <div class="modal-footer">
-          <button class="btn btn-success" data-dismiss="modal" aria-hidden="true">保存</button>
+          <button class="btn btn-success" data-dismiss="modal" aria-hidden="true" ng-click="save()">保存</button>
           <button class="btn btn-default" data-dismiss="modal" aria-hidden="true">关闭</button>
         </div>
       </div>
