品牌条件搜索并分页

--- a/pinyougou-manager-web/src/main/webapp/admin/brand.html
+++ b/pinyougou-manager-web/src/main/webapp/admin/brand.html
@@ -132,6 +132,24 @@
         )
       }
 
+      // 搜索
+      // 定义搜索对象
+      $scope.searchEntity = {}
+      //条件查询
+      $scope.search = (page, rows) => {
+        $http.post('../brand/search.do?page=' + page + "&rows=" + rows, $scope.searchEntity).success(
+          (response) => {
+            //总记录数
+            $scope.paginationConf.totalItems = response.total
+            //给列表变量赋值
+            $scope.list = response.rows
+          }
+        )
+      }
+      // 刷新列表
+      $scope.reloadList = ()=>{
+        $scope.search($scope.paginationConf.currentPage,$scope.paginationConf.itemsPerPage)
+      }
 
     })
   </script>
@@ -164,7 +182,8 @@
       </div>
       <div class="box-tools pull-right">
         <div class="has-feedback">
-
+          品牌名称:<input ng-model="searchEntity.name"> 品牌首字母:<input ng-model="searchEntity.firstChar">
+          <button class="btn btn-default" ng-click="reloadList()">查询</button>
         </div>
       </div>
       <!--工具栏/-->
