--- a/pinyougou-manager-web/src/main/webapp/admin/specification.html
+++ b/pinyougou-manager-web/src/main/webapp/admin/specification.html
@@ -37,7 +37,7 @@
       <div class="pull-left">
         <div class="form-group form-inline">
           <div class="btn-group">
-            <button type="button" class="btn btn-default" title="新建" data-toggle="modal" data-target="#editModal"><i class="fa fa-file-o"></i> 新建</button>
+            <button type="button" class="btn btn-default" title="新建" data-toggle="modal" data-target="#editModal" ng-click="entity={'specificationOptionList':[]}"><i class="fa fa-file-o"></i> 新建</button>
             <button type="button" class="btn btn-default" title="删除"><i class="fa fa-trash-o"></i> 删除</button>
 
             <button type="button" class="btn btn-default" title="刷新" onclick="window.location.reload();"><i class="fa fa-refresh"></i> 刷新</button>
@@ -96,13 +96,13 @@
           <table class="table table-bordered table-striped" width="800px">
             <tr>
               <td>规格名称</td>
-              <td><input class="form-control" placeholder="规格名称"> </td>
+              <td><input class="form-control" placeholder="规格名称" ng-model="entity.specification.specName"> </td>
             </tr>
           </table>
 
           <!-- 规格选项 -->
           <div class="btn-group">
-            <button type="button" class="btn btn-default" title="新建"><i class="fa fa-file-o"></i> 新增规格选项</button>
+            <button type="button" class="btn btn-default" title="新建" ng-click="addTableRow()"><i class="fa fa-file-o"></i> 新增规格选项</button>
 
           </div>
 
@@ -116,49 +116,49 @@
                 <th class="sorting">操作</th>
             </thead>
             <tbody>
-              <tr>
+              <tr ng-repeat="pojo in entity.specificationOptionList">
 
                 <td>
-                  <input class="form-control" placeholder="规格选项">
+                  <input ng-model="pojo.optionName" class="form-control" placeholder="规格选项">
                 </td>
                 <td>
-                  <input class="form-control" placeholder="排序">
+                  <input ng-model="pojo.orders" class="form-control" placeholder="排序">
                 </td>
                 <td>
-                  <button type="button" class="btn btn-default" title="删除"><i class="fa fa-trash-o"></i> 删除</button>
+                  <button type="button" class="btn btn-default" title="删除" ng-click="deleTableRow($index)"><i class="fa fa-trash-o"></i> 删除</button>
                 </td>
               </tr>
-              <tr>
+              <!--              <tr>-->
 
-                <td>
-                  <input class="form-control" placeholder="规格选项">
-                </td>
-                <td>
-                  <input class="form-control" placeholder="排序">
-                </td>
-                <td>
-                  <button type="button" class="btn btn-default" title="删除"><i class="fa fa-trash-o"></i> 删除</button>
-                </td>
-              </tr>
-              <tr>
+              <!--                <td>-->
+              <!--                  <input class="form-control" placeholder="规格选项">-->
+              <!--                </td>-->
+              <!--                <td>-->
+              <!--                  <input class="form-control" placeholder="排序">-->
+              <!--                </td>-->
+              <!--                <td>-->
+              <!--                  <button type="button" class="btn btn-default" title="删除"><i class="fa fa-trash-o"></i> 删除</button>-->
+              <!--                </td>-->
+              <!--              </tr>-->
+              <!--              <tr>-->
 
-                <td>
-                  <input class="form-control" placeholder="规格选项">
-                </td>
-                <td>
-                  <input class="form-control" placeholder="排序">
-                </td>
-                <td>
-                  <button type="button" class="btn btn-default" title="删除"><i class="fa fa-trash-o"></i> 删除</button>
-                </td>
-              </tr>
+              <!--                <td>-->
+              <!--                  <input class="form-control" placeholder="规格选项">-->
+              <!--                </td>-->
+              <!--                <td>-->
+              <!--                  <input class="form-control" placeholder="排序">-->
+              <!--                </td>-->
+              <!--                <td>-->
+              <!--                  <button type="button" class="btn btn-default" title="删除"><i class="fa fa-trash-o"></i> 删除</button>-->
+              <!--                </td>-->
+              <!--              </tr>-->
             </tbody>
           </table>
 
 
         </div>
         <div class="modal-footer">
-          <button class="btn btn-success" data-dismiss="modal" aria-hidden="true">保存</button>
+          <button class="btn btn-success" data-dismiss="modal" aria-hidden="true" ng-click="save()">保存</button>
           <button class="btn btn-default" data-dismiss="modal" aria-hidden="true">关闭</button>
         </div>
       </div>
