--- a/pinyougou-manager-web/src/main/webapp/admin/specification.html
+++ b/pinyougou-manager-web/src/main/webapp/admin/specification.html
@@ -69,7 +69,7 @@
             <td>{{ entity.id }}</td>
             <td>{{ entity.specName }}</td>
             <td class="text-center">
-              <button type="button" class="btn bg-olive btn-xs" data-toggle="modal" data-target="#editModal">修改</button>
+              <button type="button" class="btn bg-olive btn-xs" data-toggle="modal" data-target="#editModal" ng-click="findOne(entity.id)">修改</button>
             </td>
           </tr>
         </tbody>
@@ -128,30 +128,6 @@
                   <button type="button" class="btn btn-default" title="删除" ng-click="deleTableRow($index)"><i class="fa fa-trash-o"></i> 删除</button>
                 </td>
               </tr>
-              <!--              <tr>-->
-
-              <!--                <td>-->
-              <!--                  <input class="form-control" placeholder="规格选项">-->
-              <!--                </td>-->
-              <!--                <td>-->
-              <!--                  <input class="form-control" placeholder="排序">-->
-              <!--                </td>-->
-              <!--                <td>-->
-              <!--                  <button type="button" class="btn btn-default" title="删除"><i class="fa fa-trash-o"></i> 删除</button>-->
-              <!--                </td>-->
-              <!--              </tr>-->
-              <!--              <tr>-->
-
-              <!--                <td>-->
-              <!--                  <input class="form-control" placeholder="规格选项">-->
-              <!--                </td>-->
-              <!--                <td>-->
-              <!--                  <input class="form-control" placeholder="排序">-->
-              <!--                </td>-->
-              <!--                <td>-->
-              <!--                  <button type="button" class="btn btn-default" title="删除"><i class="fa fa-trash-o"></i> 删除</button>-->
-              <!--                </td>-->
-              <!--              </tr>-->
             </tbody>
           </table>
 
