--- a/pinyougou-manager-web/src/main/webapp/admin/type_template.html
+++ b/pinyougou-manager-web/src/main/webapp/admin/type_template.html
@@ -19,17 +19,25 @@
   <script src="../plugins/select2/select2.min.js" type="text/javascript"></script>
 
   <script type="text/javascript" src="../plugins/angularjs/angular.min.js"> </script>
+<!--  分页组件-->
   <script src="../plugins/angularjs/pagination.js"></script>
   <link rel="stylesheet" href="../plugins/angularjs/pagination.css">
 
   <script type="text/javascript" src="../js/base_pagination.js"> </script>
   <script type="text/javascript" src="../js/service/typeTemplateService.js"> </script>
+  <script type="text/javascript" src="../js/service/brandService.js"> </script>
   <script type="text/javascript" src="../js/controller/baseController.js"> </script>
   <script type="text/javascript" src="../js/controller/typeTemplateController.js"> </script>
 
+  <!--  select2 组件-->
+  <link rel="stylesheet" href="../plugins/select2/select2.css" />
+  <link rel="stylesheet" href="../plugins/select2/select2-bootstrap.css" />
+  <script src="../plugins/select2/select2.min.js" type="text/javascript"></script>
+  <script type="text/javascript" src="../js/angular-select2.js">  </script>
+
 </head>
 
-<body class="hold-transition skin-red sidebar-mini" ng-app="pinyougou" ng-controller="typeTemplateController">
+<body class="hold-transition skin-red sidebar-mini" ng-app="pinyougou" ng-controller="typeTemplateController" ng-init="findBrandList()">
   <!-- .box-body -->
 
   <div class="box-header with-border">
@@ -134,7 +142,7 @@
             <tr>
               <td>关联品牌</td>
               <td>
-
+                <input select2  select2-model="entity.brandIds" config="brandList" multiple placeholder="选择品牌（可多选）" class="form-control" type="text"/>
               </td>
             </tr>
             <tr>
