--- a/pinyougou-manager-web/src/main/webapp/admin/type_template.html
+++ b/pinyougou-manager-web/src/main/webapp/admin/type_template.html
@@ -19,13 +19,14 @@
   <script src="../plugins/select2/select2.min.js" type="text/javascript"></script>
 
   <script type="text/javascript" src="../plugins/angularjs/angular.min.js"> </script>
-<!--  分页组件-->
+  <!--  分页组件-->
   <script src="../plugins/angularjs/pagination.js"></script>
   <link rel="stylesheet" href="../plugins/angularjs/pagination.css">
 
   <script type="text/javascript" src="../js/base_pagination.js"> </script>
   <script type="text/javascript" src="../js/service/typeTemplateService.js"> </script>
   <script type="text/javascript" src="../js/service/brandService.js"> </script>
+  <script type="text/javascript" src="../js/service/specificationService.js"> </script>
   <script type="text/javascript" src="../js/controller/baseController.js"> </script>
   <script type="text/javascript" src="../js/controller/typeTemplateController.js"> </script>
 
@@ -33,11 +34,11 @@
   <link rel="stylesheet" href="../plugins/select2/select2.css" />
   <link rel="stylesheet" href="../plugins/select2/select2-bootstrap.css" />
   <script src="../plugins/select2/select2.min.js" type="text/javascript"></script>
-  <script type="text/javascript" src="../js/angular-select2.js">  </script>
+  <script type="text/javascript" src="../js/angular-select2.js"> </script>
 
 </head>
 
-<body class="hold-transition skin-red sidebar-mini" ng-app="pinyougou" ng-controller="typeTemplateController" ng-init="findBrandList()">
+<body class="hold-transition skin-red sidebar-mini" ng-app="pinyougou" ng-controller="typeTemplateController" ng-init="findBrandList();findSpecList()">
   <!-- .box-body -->
 
   <div class="box-header with-border">
@@ -95,17 +96,6 @@
               <button type="button" class="btn bg-olive btn-xs" data-toggle="modal" data-target="#editModal">修改</button>
             </td>
           </tr>
-          <!--          <tr>-->
-          <!--            <td><input type="checkbox"></td>-->
-          <!--            <td>2</td>-->
-          <!--            <td>服装</td>-->
-          <!--            <td>七匹狼,雅戈尔</td>-->
-          <!--            <td>服装尺码</td>-->
-          <!--            <td></td>-->
-          <!--            <td class="text-center">-->
-          <!--              <button type="button" class="btn bg-olive btn-xs" data-toggle="modal" data-target="#editModal">修改</button>-->
-          <!--            </td>-->
-          <!--          </tr>-->
         </tbody>
       </table>
       <!--数据列表/-->
@@ -142,13 +132,13 @@
             <tr>
               <td>关联品牌</td>
               <td>
-                <input select2  select2-model="entity.brandIds" config="brandList" multiple placeholder="选择品牌（可多选）" class="form-control" type="text"/>
+                <input select2 select2-model="entity.brandIds" config="brandList" multiple placeholder="选择品牌（可多选）" class="form-control" type="text" />
               </td>
             </tr>
             <tr>
               <td>关联规格</td>
               <td>
-
+                <input select2 select2-model="entity.specIds" config="specList" multiple placeholder="选择规格（可多选）" class="form-control" type="text" />
               </td>
             </tr>
 
