--- a/pinyougou-manager-web/src/main/webapp/admin/type_template.html
+++ b/pinyougou-manager-web/src/main/webapp/admin/type_template.html
@@ -89,9 +89,9 @@
             <td><input type="checkbox"></td>
             <td>{{ entity.id }}</td>
             <td>{{ entity.name }}</td>
-            <td>{{ entity.brandIds }}</td>
-            <td>{{ entity.customAttributeItems }}</td>
-            <td></td>
+            <td>{{ jsonToTsring(entity.brandIds,'text') }}</td>
+            <td>{{ jsonToTsring(entity.specIds,'text') }}</td>
+            <td>{{ jsonToTsring(entity.customAttributeItems,'text') }}</td>
             <td class="text-center">
               <button type="button" class="btn bg-olive btn-xs" data-toggle="modal" data-target="#editModal">修改</button>
             </td>
