--- a/pinyougou-manager-web/src/main/webapp/admin/type_template.html
+++ b/pinyougou-manager-web/src/main/webapp/admin/type_template.html
@@ -93,7 +93,7 @@
             <td>{{ jsonToTsring(entity.specIds,'text') }}</td>
             <td>{{ jsonToTsring(entity.customAttributeItems,'text') }}</td>
             <td class="text-center">
-              <button type="button" class="btn bg-olive btn-xs" data-toggle="modal" data-target="#editModal">修改</button>
+              <button type="button" class="btn bg-olive btn-xs" data-toggle="modal" data-target="#editModal" ng-click="findOne(entity.id)">修改</button>
             </td>
           </tr>
         </tbody>
@@ -126,8 +126,8 @@
 
           <table class="table table-bordered table-striped" width="800px">
             <tr>
-              <td>商品类型</td>
-              <td><input class="form-control" placeholder="商品类型"> </td>
+              <td>分类模板名称</td>
+              <td><input class="form-control" placeholder="分类模板名称" ng-model="entity.name"> </td>
             </tr>
             <tr>
               <td>关联品牌</td>
@@ -159,8 +159,8 @@
                   </thead>
                   <tbody>
                     <tr ng-repeat="pojo in entity.customAttributeItems">
-                      <td><input type="checkbox" class="icheckbox_square-blue" ng-model="pojo.text"></td>
-                      <td><input class="form-control" placeholder="属性名称"></td>
+                      <td><input type="checkbox" class="icheckbox_square-blue"></td>
+                      <td><input class="form-control" placeholder="属性名称" ng-model="pojo.text"></td>
                       <td><button type="button" class="btn btn-default" title="删除" ng-click="deleTableRow($index)"><i class="fa fa-trash-o"></i> 删除</button></td>
                     </tr>
                   </tbody>
@@ -173,7 +173,7 @@
 
         </div>
         <div class="modal-footer">
-          <button class="btn btn-success" data-dismiss="modal" aria-hidden="true">保存</button>
+          <button class="btn btn-success" data-dismiss="modal" aria-hidden="true" ng-click="save()">保存</button>
           <button class="btn btn-default" data-dismiss="modal" aria-hidden="true">关闭</button>
         </div>
       </div>
