--- a/pinyougou-shop-web/src/main/webapp/register.html
+++ b/pinyougou-shop-web/src/main/webapp/register.html
@@ -8,9 +8,15 @@
 	<title>商家入驻申请</title>
 	<link rel="stylesheet" type="text/css" href="css/webbase.css" />
 	<link rel="stylesheet" type="text/css" href="css/pages-register.css" />
+
+	<script type="text/javascript" src="plugins/angularjs/angular.min.js"> </script>
+	<script type="text/javascript" src="js/base.js"> </script>
+	<script type="text/javascript" src="js/service/sellerService.js"> </script>
+	<script type="text/javascript" src="js/controller/sellerController.js"> </script>
+
 </head>
 
-<body>
+<body ng-app="pinyougou" ng-controller="sellerController">
 	<div class="register py-container ">
 		<!--head-->
 		<div class="logoArea">
@@ -25,112 +31,112 @@
 					<div class="control-group">
 						<label class="control-label">登陆名（不可修改）：</label>
 						<div class="controls">
-							<input type="text" placeholder="登陆名" class="input-xfat input-xlarge">
+							<input type="text" placeholder="登陆名" class="input-xfat input-xlarge" ng-model="entity.sellerId">
 						</div>
 					</div>
 
 					<div class="control-group">
 						<label class="control-label">登陆密码：</label>
 						<div class="controls">
-							<input type="password" placeholder="登陆密码" class="input-xfat input-xlarge">
+							<input type="password" placeholder="登陆密码" class="input-xfat input-xlarge" ng-model="entity.password">
 						</div>
 					</div>
 
 					<div class="control-group">
 						<label class="control-label">店铺名称：</label>
 						<div class="controls">
-							<input type="text" placeholder="店铺名称" class="input-xfat input-xlarge">
+							<input type="text" placeholder="店铺名称" class="input-xfat input-xlarge" ng-model="entity.nickName">
 						</div>
 					</div>
 
 					<div class="control-group">
 						<label class="control-label">公司名称：</label>
 						<div class="controls">
-							<input type="text" placeholder="公司名称" class="input-xfat input-xlarge">
+							<input type="text" placeholder="公司名称" class="input-xfat input-xlarge" ng-model="entity.name">
 						</div>
 					</div>
 
 					<div class="control-group">
 						<label class="control-label">公司电话：</label>
 						<div class="controls">
-							<input type="text" placeholder="公司电话" class="input-xfat input-xlarge">
+							<input type="text" placeholder="公司电话" class="input-xfat input-xlarge" ng-model="entity.telephone">
 						</div>
 					</div>
 
 					<div class="control-group">
 						<label class="control-label">公司详细地址：</label>
 						<div class="controls">
-							<input type="text" placeholder="公司详细地址" class="input-xfat input-xlarge">
+							<input type="text" placeholder="公司详细地址" class="input-xfat input-xlarge" ng-model="entity.addressDetail">
 						</div>
 					</div>
 
 					<div class="control-group">
 						<label class="control-label">联系人姓名：</label>
 						<div class="controls">
-							<input type="text" placeholder="联系人姓名" class="input-xfat input-xlarge">
+							<input type="text" placeholder="联系人姓名" class="input-xfat input-xlarge" ng-model="entity.linkmanName">
 						</div>
 					</div>
 
 					<div class="control-group">
 						<label class="control-label">联系人QQ：</label>
 						<div class="controls">
-							<input type="text" placeholder="联系人QQ" class="input-xfat input-xlarge">
+							<input type="text" placeholder="联系人QQ" class="input-xfat input-xlarge" ng-model="entity.linkmanQq">
 						</div>
 					</div>
 
 					<div class="control-group">
 						<label class="control-label">联系人手机：</label>
 						<div class="controls">
-							<input type="text" placeholder="联系人手机" class="input-xfat input-xlarge">
+							<input type="text" placeholder="联系人手机" class="input-xfat input-xlarge" ng-model="entity.linkmanMobile">
 						</div>
 					</div>
 
 					<div class="control-group">
 						<label class="control-label">联系人EMAIL：</label>
 						<div class="controls">
-							<input type="text" placeholder="联系人EMAIL" class="input-xfat input-xlarge">
+							<input type="text" placeholder="联系人EMAIL" class="input-xfat input-xlarge" ng-model="entity.linkmanEmail">
 						</div>
 					</div>
 
 					<div class="control-group">
 						<label class="control-label">营业执照号：</label>
 						<div class="controls">
-							<input type="text" placeholder="营业执照号" class="input-xfat input-xlarge">
+							<input type="text" placeholder="营业执照号" class="input-xfat input-xlarge" ng-model="entity.licenseNumber">
 						</div>
 					</div>
 
 					<div class="control-group">
 						<label class="control-label">税务登记证号：</label>
 						<div class="controls">
-							<input type="text" placeholder="税务登记证号" class="input-xfat input-xlarge">
+							<input type="text" placeholder="税务登记证号" class="input-xfat input-xlarge" ng-model="entity.taxNumber">
 						</div>
 					</div>
 
 					<div class="control-group">
 						<label class="control-label">组织机构代码证：</label>
 						<div class="controls">
-							<input type="text" placeholder="组织机构代码证" class="input-xfat input-xlarge">
+							<input type="text" placeholder="组织机构代码证" class="input-xfat input-xlarge" ng-model="entity.orgNumber">
 						</div>
 					</div>
 
 					<div class="control-group">
 						<label class="control-label">法定代表人：</label>
 						<div class="controls">
-							<input type="text" placeholder="法定代表人" class="input-xfat input-xlarge">
+							<input type="text" placeholder="法定代表人" class="input-xfat input-xlarge" ng-model="entity.legalPerson">
 						</div>
 					</div>
 
 					<div class="control-group">
 						<label class="control-label">法定代表人身份证号：</label>
 						<div class="controls">
-							<input type="text" placeholder="法定代表人身份证号" class="input-xfat input-xlarge">
+							<input type="text" placeholder="法定代表人身份证号" class="input-xfat input-xlarge" ng-model="entity.legalPersonCardId">
 						</div>
 					</div>
 
 					<div class="control-group">
 						<label class="control-label">开户行名称：</label>
 						<div class="controls">
-							<input type="text" placeholder="开户行名称" class="input-xfat input-xlarge">
+							<input type="text" placeholder="开户行名称" class="input-xfat input-xlarge" ng-model="entity.bankName">
 						</div>
 					</div>
 
@@ -144,7 +150,7 @@
 					<div class="control-group">
 						<label class="control-label">银行账号：</label>
 						<div class="controls">
-							<input type="text" placeholder="银行账号" class="input-xfat input-xlarge">
+							<input type="text" placeholder="银行账号" class="input-xfat input-xlarge" ng-model="entity.bankUser">
 						</div>
 					</div>
 
@@ -157,7 +163,7 @@
 					<div class="control-group">
 						<label class="control-label"></label>
 						<div class="controls btn-reg">
-							<a class="sui-btn btn-block btn-xlarge btn-danger" href="home.html" target="_blank">申请入驻</a>
+							<a class="sui-btn btn-block btn-xlarge btn-danger" href="javascript:;" target="_blank" ng-click="add()">申请入驻</a>
 						</div>
 					</div>
 				</form>
