--- a/pinyougou-manager-web/src/main/webapp/admin/item_cat.html
+++ b/pinyougou-manager-web/src/main/webapp/admin/item_cat.html
@@ -28,7 +28,7 @@
 
 </head>
 
-<body class="hold-transition skin-red sidebar-mini" ng-app="pinyougou" ng-controller="itemCatController">
+<body class="hold-transition skin-red sidebar-mini" ng-app="pinyougou" ng-controller="itemCatController" ng-init="findByParentId(0)">
   <!-- .box-body -->
 
   <div class="box-header with-border">
@@ -86,15 +86,14 @@
             <td>{{ entity.name }}</td>
             <td>{{ entity.typeId }}</td>
             <td class="text-center">
-              <button type="button" class="btn bg-olive btn-xs">查询下级</button>
+              <button type="button" class="btn bg-olive btn-xs" ng-click="findByParentId(entity.id)">查询下级</button>
               <button type="button" class="btn bg-olive btn-xs" data-toggle="modal" data-target="#editModal" ng-click="findOne(entity.id)">修改</button>
             </td>
           </tr>
         </tbody>
       </table>
       <!--数据列表/-->
-      <!-- 分页 -->
-      <tm-pagination conf="paginationConf"></tm-pagination>
+
     </div>
     <!-- 数据表格 /-->
 
