商品图片列表移除图片

--- a/pinyougou-shop-web/src/main/webapp/admin/goods_edit.html
+++ b/pinyougou-shop-web/src/main/webapp/admin/goods_edit.html
@@ -156,7 +156,7 @@
                     <td>
                       <img alt="" src="{{ pojo.url }}" width="100px" height="100px">
                     </td>
-                    <td> <button type="button" class="btn btn-default" title="删除"><i class="fa fa-trash-o"></i> 删除</button></td>
+                    <td> <button type="button" class="btn btn-default" title="删除" ng-click="remove_image_entity($index)"><i class="fa fa-trash-o"></i> 删除</button></td>
                   </tr>
                 </tbody>
               </table>
