--- a/pinyougou-shop-web/src/main/webapp/admin/goods_edit.html
+++ b/pinyougou-shop-web/src/main/webapp/admin/goods_edit.html
@@ -26,12 +26,13 @@
   <script type="text/javascript" src="../js/base.js"> </script>
   <script type="text/javascript" src="../js/service/goodsService.js"> </script>
   <script type="text/javascript" src="../js/service/uploadService.js"> </script>
+  <script type="text/javascript" src="../js/service/itemCatService.js"> </script>
   <script type="text/javascript" src="../js/controller/goodsController.js"> </script>
 
 
 </head>
 
-<body class="hold-transition skin-red sidebar-mini" ng-app="pinyougou" ng-controller="goodsController">
+<body class="hold-transition skin-red sidebar-mini" ng-app="pinyougou" ng-controller="goodsController" ng-init="selectItemCat1List()">
 
   <!-- 正文区域 -->
   <section class="content">
@@ -70,14 +71,14 @@
                 <table>
                   <tr>
                     <td>
-                      <select class="form-control">
+                      <select class="form-control" ng-model="entity.goods.category1Id" ng-options="item.id as item.name for item in itemCat1List">
                       </select>
                     </td>
                     <td>
-                      <select class="form-control select-sm"></select>
+                      <select class="form-control select-sm" ng-model="entity.goods.category2Id" ng-options="item.id as item.name for item in itemCat2List"></select>
                     </td>
                     <td>
-                      <select class="form-control select-sm"></select>
+                      <select class="form-control select-sm" ng-model="entity.goods.category3Id" ng-options="item.id as item.name for item in itemCat3List"></select>
                     </td>
                     <td>
                       模板ID:19
